specs/013-array-methods/examples/valid/indexof-includes-join.ts
let nums: int[] = [10, 20, 30, 40];
console.log(nums.indexOf(30));
console.log(nums.indexOf(99));
console.log(nums.includes(20));
console.log(nums.includes(7));
console.log(nums.join());
console.log(nums.join(" - "));

let words: string[] = ["alpha", "beta", "gamma"];
console.log(words.indexOf("beta"));
console.log(words.includes("delta"));
console.log(words.join(", "));
