specs/013-array-methods/examples/invalid/reduce-arg-count.ts
let xs: int[] = [1, 2, 3];
let sum = xs.reduce((acc: int, x: int) => acc + x);
console.log(sum);
